--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Driving Cars</title>
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -26,8 +26,8 @@
             </section>
         </main>
     </div>
-    <script src="/src/js/app.js" type="module"></script>
-    <script src="/src/js/dave.js"></script>
+    <script src="/js/app.js" type="module"></script>
+    <!-- <script src="/js/dave.js"></script> -->
 </body>
 
 </html>
