--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <script src="/js/app.js" type="module"></script>
     <script src="/js/Dave.js"></script>
+    <script src="/js/Hari.js"></script>
 </body>
 
 </html>
