--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </main>
     </div>
     <script src="/js/app.js" type="module"></script>
-    <script src="/js/Dave.js"></script>
+    <script src="/js/Kevin.js"></script>
 </body>
 
 </html>
